# OmniInfer

./: .gitignore  .gitmodules  CITATION.cff  CLI.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  build.md  convert_hf_to_gguf.py  omniinfer  omniinfer.cmd  omniinfer.ps1  omniinfer.py  omniinfer_gateway.py  pyproject.toml  requirements-dev.txt  torch_pin.py
.github/workflows/: ci.yml  main-platform-ci.yml  release-cli.yml  release.yml
android/omniinfer-server/: build.gradle.kts  consumer-rules.pro
android/omniinfer-server/src/main/: AndroidManifest.xml
android/omniinfer-server/src/main/cpp/omniinfer-jni/: CMakeLists.txt  backend_executorch_qnn.h  backend_llama_cpp.h  backend_mnn.h  et_chat_template.h  inference_backend.h  omniinfer_jni.cpp  soc_defaults.h  thinking_tags.h  tool_call_parser.h
crates/: README.md
crates/omniinfer-cli/: Cargo.toml
crates/omniinfer-cli/src/: advisor.rs  backend_commands.rs  backend_installer.rs  chat.rs  cli.rs  cloudflare.rs  gateway.rs  local_gateway.rs  main.rs  model_commands.rs  prebuilt_catalog.rs  serve.rs  tui.rs
crates/omniinfer-cli/src/advisor/: model.rs  output.rs  system.rs
crates/omniinfer-cli/src/gateway/: access_policy.rs  gpu_status.rs  request_history.rs  response.rs  runtime_manager.rs  tests.rs
crates/omniinfer-cli/src/tui/: models.rs  render.rs
crates/omniinfer-cli/tests/: cli_smoke.rs
crates/omniinfer-cli/tests/cli_smoke/: advisor.rs  backend.rs  chat.rs  core.rs  gateway.rs  model.rs  serve.rs  support.rs
crates/omniinfer-cli/tests/fixtures/: fake_llama_server.rs
crates/omniinfer-core/: Cargo.toml
crates/omniinfer-core/model_catalogs/: linux.json  mac.json  windows.json
crates/omniinfer-core/src/: anthropic.rs  backend_args.rs  backend_profiles.rs  backend_registry.rs  chat_stream.rs  config.rs  gateway_auth.rs  http_client.rs  lib.rs  local_state.rs  model_artifacts.rs  model_catalog.rs  model_load.rs  paths.rs  public_models.rs  request_normalization.rs  runtime_plan.rs  runtime_process.rs  serve_state.rs
docs/: API.md  CLI.md  README.md  TODO.md  android-cli.md  android-integration.md  android-jni-bridge.md  architecture.drawio  build.md  model-load.md  python-runtime-audit.md  remote-access.md  rust-control-plane.md
docs/OmniStudio/: api-service-ch.md  api-service.md
docs/android/: aar-integration.md  api-examples.md  backends.md  et-qnn.md  integration.md  multimodal.md  smoke-tests.md  troubleshooting.md
docs/model-catalog/mnn/: model_market.json
extension/llm/tokenizers/: .gitignore  BUCK  CMakeLists.txt  setup.py
extension/llm/tokenizers/pytorch_tokenizers/: llama2c.py  tiktoken.py
extension/llm/tokenizers/src/: bpe_tokenizer_base.cpp  hf_tokenizer.cpp  llama2c_tokenizer.cpp  normalizer.cpp  pcre2_regex.cpp  post_processor.cpp  python_bindings.cpp  sentencepiece.cpp  std_regex.cpp  tekken.cpp  tiktoken.cpp  token_decoder.cpp
ggml/: CMakeLists.txt
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp  ggml-quants.c
ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp
ggml/src/ggml-htp/: ggml-htp.cc  htp-cpu-impl.c  htp-ops.cc
ggml/src/ggml-opencl/: ggml-opencl.cpp
include/: llama.h
ios/OmniInferServer/: .gitignore  Package.swift
ios/OmniInferServer/Sources/OmniInferServer/: InferenceEngine.swift  LlamaCppEngine.swift  MLXEngine.swift  OmniInferBridge.swift  OmniInferServer.swift  OmniInferService.swift
ios/native/: CMakeLists.txt  backend_llama_cpp.h  inference_backend.h  omniinfer_bridge.cpp  omniinfer_bridge.h
platform/Android/: README.md
platform/Linux/: build-llama-cpu.sh  build-llama-rocm.sh  build-release.sh
platform/Linux/llama.cpp-linux-rocm/scripts/: build-llama-linux-rocm.sh
platform/Linux/llama.cpp-linux/scripts/: build-llama-linux.sh
platform/Mac/llama.cpp-mac/: .gitignore  README.md
platform/Mac/llama.cpp-mac/scripts/: build-llama-mac.sh
platform/Windows/: build-llama-cpu.ps1  build-llama-cuda.ps1  build-release.ps1
platform/Windows/llama.cpp-CPU/: README.md
platform/Windows/llama.cpp-CPU/scripts/: build-llama-cpu.ps1  test-multimodal.ps1
platform/Windows/llama.cpp-GPU/: README.md
platform/Windows/llama.cpp-GPU/scripts/: build-llama-cuda.ps1
platform/Windows/llama.cpp-cpu/: README.md
platform/Windows/llama.cpp-cpu/scripts/: build-llama-cpu.ps1  test-multimodal.ps1
platform/Windows/llama.cpp-cuda/: README.md
release/: README.md  build_portable.ps1
release/config/: omniinfer.json
scripts/: benchmark_backends.py  benchmark_linux_runtimes.py  benchmark_macos_runtimes.py  capture_cli_contracts.py  install-cuda-cublas-local.sh  install-deps.sh  install-from-source.sh  install.ps1  install.sh  prebuilt_backends.json  profile_python_cli.py  smoke_vlm_mmproj_matrix.py  update_prebuilt_catalog.py  validate_no_python_portable.py  validate_rust_control_plane.py
service_core/: __init__.py  advisor.py  anthropic_adapter.py  backend_cli_args.py  backend_configs.py  cli.py  commands.py  local_state.py  logger.py  model_catalog.py  remote_access.py  runtime.py  service.py  tui.py  version.py
service_core/backends/: __init__.py  base.py  ik_llama_cpp.py  llama_cpp.py  mlx.py  mnn.py  turboquant.py  vllm.py
service_core/drivers/: __init__.py  base.py  mlx.py  mnn.py
service_core/model_catalogs/: __init__.py  mac.json  windows.json
src/: llama-model-loader.cpp  llama-model.cpp  llama-quant.cpp  llama.cpp
tests/: README.md  test_advisor.py  test_anthropic_adapter.py  test_backend_cli_args.py  test_backends.py  test_cli_model_refs.py  test_cli_serve.py  test_cuda_detect.sh  test_drivers.py  test_e2e.py  test_e2e.sh  test_embedded_runtime.py  test_http_handler.py  test_inference_flow.py  test_inference_flow.sh  test_install_deps.sh  test_linux_release_backends.py  test_mlx_driver.py  test_mnn_backend.py  test_mnn_driver.py  test_model_catalog.py  test_remote_access.py  test_runtime.py  test_runtime_root_resolution.py  test_tui_advisor.py  test_turboquant_backend.py
tmp/: android-dev-playbook.md  usage.md
tools/mtmd/: CMakeLists.txt  clip.cpp  mtmd-helper.cpp  mtmd.cpp  mtmd.h
tools/quantize/: quantize.cpp
utils/: render_clear.py
(+20 files in other folders)
