[project]
name = "omniinfer"
version = "0.1.11"
description = "Cross-platform local inference engine for LLM and VLM models"
requires-python = ">=3.10"
license = "Apache-2.0"

dependencies = []  # Core runs on stdlib only

[project.optional-dependencies]
mlx = ["mlx", "mlx-lm"]
dev = ["pytest>=7.0"]
