[package]
name = "omniinfer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "omniinfer-rs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
omniinfer-core = { path = "../omniinfer-core" }
serde_json.workspace = true
