[package]
name = "omniinfer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "omniinfer-rs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
clap.workspace = true
clap_complete.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
omniinfer-core = { path = "../omniinfer-core" }
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
ureq.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
