[package]
name = "omniinfer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
thiserror.workspace = true
ureq.workspace = true
sysinfo.workspace = true
